Fixed some margin and alignment issues, adjusted color contrast, added alt text to images.

--- a/frontend/scss/_variable_overrides.scss
+++ b/frontend/scss/_variable_overrides.scss
@@ -6,7 +6,7 @@
 
 
 //  Custom Color system
-$primary:       #A768BA;
+$primary:       #8a4d9c;
 $secondary:     #8F5BFE;
 $success:       #AFDBF4;
 $info:          #76C287;
@@ -44,17 +44,14 @@ body {
   background: linear-gradient(331deg, rgba(167,104,186,0.5578606442577031) 42%, rgba(230,138,8,0.5970763305322129) 100%);
 }
 
-.hero {
-  border-bottom: 1px solid $warning;
-  border-top: 1px solid $warning;
-  width: 100% !important;
-}
-
-.jumbotron-wrapper {
-  padding: 0px !important;
-}
-
 .jumbotron {
   margin-bottom: 0px !important;
+  
+}
+
+#jumbotron-wrapper {
+  border-top: 1px solid $warning !important;
+  border-bottom: 1px solid $warning !important;
+  text-shadow: 1px 1px 2px $warning;
 }
 
